...
                icon: Icon(Icons.fitness_center), label: 'Active'),
            BottomNavigationBarItem(
                icon: Icon(Icons.history), label: 'History'),
            BottomNavigationBarItem(
                icon: Icon(Icons.calendar_today), label: 'Plan'),
            BottomNavigationBarItem(
                icon: Icon(Icons.analytics), label: 'Stats'),
            BottomNavigationBarItem(
                icon: Icon(Icons.settings), label: 'Settings'),
          ],
          onTap: (index) {
            child.goBranch(index);
          },
        ),
      ),
...
